--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div style="justify-content: center; display: flex">
 
-        <img src="0802.jpg" width="200" height="250"
+        <img src="img.jpg" width="200" height="250"
 
         <div style="justify-content: center; display: flex">
 
